--- a/style/form.css
+++ b/style/form.css
@@ -2,9 +2,6 @@
   margin: 0;
   padding: 0;
   font-family: "Onest", Verdana, Arial, sans-serif;
-  font-optical-sizing: auto;
-  font-weight: normal;
-  font-style: normal;
 }
 
 body {
@@ -12,9 +9,10 @@ body {
 }
 
 main {
+  height: 100%;
   background-color: #E7EBE3;
   color: #000000;
-  padding-bottom: 3rem;
+  padding: 3rem 0;
 }
 
 p {
@@ -38,6 +36,7 @@ h1, h2 {
 
 h1 {
   font-weight: bold;
+  letter-spacing: 0.2rem;
 }
 
 header, footer {
@@ -47,8 +46,7 @@ header, footer {
 header {
   position: sticky;
   top: 0;
-  min-height: 2.75rem;
-  max-height: 3.75rem;
+  height: 3rem;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -102,9 +100,16 @@ footer a:active {
 footer a:visited {
   color: #CB974F;
 }
+footer p {
+  width: 100%;
+}
 
 .footer-links-div {
-  margin: 1rem 0;
+  margin: 1rem 2rem;
+  width: 100%;
+}
+.footer-links-div a {
+  margin: 0.25rem 0;
 }
 
 .dropdown-menu {
@@ -201,7 +206,7 @@ footer a:visited {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: url(img/pictures/hero-small_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll;
+  background: url(../img/pictures/hero-small_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll;
   background-size: cover;
 }
 .hero h1, .hero p {
@@ -209,6 +214,7 @@ footer a:visited {
 }
 .hero h1 {
   text-shadow: 0 0 0.5rem #000000;
+  margin: 0;
 }
 
 .homepage-badge-img-1 {
@@ -225,40 +231,50 @@ footer a:visited {
   margin: 2rem 1rem 0;
 }
 
-.btn {
-  margin: 1rem 0;
-}
-.btn__cta {
+.cta {
   font-family: "DM Serif Text", Georgia, Times, serif;
   font-weight: normal;
   font-style: normal;
-  letter-spacing: 0.15rem;
+  font-size: 1.5rem;
   font-weight: bold;
-  height: 2.75rem;
-  width: 11rem;
+  letter-spacing: 0.2rem;
   border-radius: 0.5rem;
 }
-.btn__cta--hero {
+.cta:hover {
+  scale: 1.1;
+}
+
+.btn {
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.btn__green {
   color: #000000;
   background: #91AE7B;
   border: #ffffff 2px solid;
-  box-shadow: 0 0 1.5rem 0.9rem rgba(0, 0, 0, 0.7);
+  box-shadow: 0 0 1.5rem 0.9rem rgba(0, 0, 0, 0.2);
 }
-.btn__cta--hero:hover, .btn__cta--hero:active {
+.btn__green:hover, .btn__green:active {
   color: #ffffff;
   background: rgba(0, 0, 0, 0.7);
-  border: #91AE7B 3px solid;
+  border: #8bd753 3px solid;
   box-shadow: 0 0 1rem 0.6rem rgba(255, 255, 255, 0.2);
 }
-.btn__cta--orange {
+.btn__orange {
   background: #CB974F;
-  border: #6d4d20 2px solid;
-  box-shadow: 0 0 1rem 0.4rem rgba(0, 0, 0, 0.2);
+  border: 3px #6d4d20 solid;
 }
-.btn__cta--orange:hover, .btn__cta--orange:active {
-  box-shadow: 0 0.3rem 1rem 0.4rem rgba(87, 61, 26, 0.5);
-  background: rgba(203, 151, 79, 0.4);
-  border: #6d4d20 3px solid;
+.btn__orange:hover, .btn__orange:active {
+  border: 3px #573d1a solid;
+  background: #d59945;
+  box-shadow: 0 0.3rem 1rem 0.4rem rgba(0, 0, 0, 0.2);
+}
+
+.btn-lg {
+  height: 2.75rem;
+  width: 11rem;
 }
 
 .crd-normal__svg {
@@ -287,4 +303,64 @@ footer a:visited {
 .profil-picture__header {
   max-width: auto;
   max-height: 80%;
-}/*# sourceMappingURL=style.css.map */
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+form button[type=submit] {
+  margin-top: 2rem;
+  letter-spacing: 0.15rem;
+}
+form button[type=submit]:hover {
+  font-weight: bold;
+}
+
+.form-element {
+  margin: 0.5rem auto;
+  width: 90%;
+}
+.form-element input {
+  border: #B5B4A2 1px solid;
+  height: 2.75rem;
+}
+.form-element input:focus, .form-element input:active {
+  border: 3px #CB974F solid;
+}
+
+.password-input {
+  display: flex;
+  align-items: center;
+}
+
+.icon-input {
+  cursor: pointer;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin-left: 0.5rem;
+}
+
+@media screen and (min-width: 768px) {
+  .form-element {
+    min-width: 20rem;
+    width: 60%;
+  }
+  label {
+    font-size: 1.06rem;
+  }
+}
+@media screen and (min-width: 992px) {
+  main {
+    margin: 4rem auto 8rem;
+    min-width: 30rem;
+    width: 50%;
+  }
+  .form-element {
+    width: 40%;
+  }
+  label {
+    font-size: 1.12rem;
+  }
+}/*# sourceMappingURL=form.css.map */
