--- a/style/sass/responsive.sass
+++ b/style/sass/responsive.sass
@@ -52,8 +52,7 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
 
     // HEADER ------------------------------------------
     header
-        min-height: 3.18rem //51px
-        max-height: 4.07rem //65px
+        height: 3.25rem //52px (optimal 51 < 65px)
     .header-icon
         width: 2.38rem //38px (min 28px | max 48px)
         margin: 0 1.5rem
@@ -64,14 +63,12 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
 
     // MAIN ------------------------------------------
     .hero
-        background: url(img/pictures/hero-medium_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll
+        background: url(../img/pictures/hero-medium_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll
         background-size: cover
-    .btn
-        font-size: $tablet-font-size-body
-        &__cta
-            font-size: 1.25rem
-            height: 3rem //48px
-            width: 12rem //192px
+    .btn-lg
+        font-size: 1.25rem
+        height: 3rem //48px
+        width: 12rem //192px
 
 // -------------------------------------------------
 // DESKTOP
@@ -110,26 +107,25 @@ $desktop-font-size-body: 1.12rem //18px (optimal 16px < 20px)
         
     // HEADER ------------------------------------------
     header
-        min-height: 3.5rem //56px
-        max-height: 4.69rem //75px
+        height: 3.5rem //56px (optimal 56 < 75 px)
     .header-icon
         width: 2.75rem //44px (min 32px | max 56px)
         margin: 0 3rem
     
     // FOOTER ----------------------------------------
+    footer
+        padding: 2rem 20%
     .footer-links-div
         margin: 2rem 0
 
     // MAIN ------------------------------------------
     .hero
         height: 90vh
-        background: url(img/pictures/hero-large_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll
+        background: url(../img/pictures/hero-large_patrick-tomasso-5hvn-2WW6rY-unsplash.jpg) center no-repeat scroll
         background-size: cover
-    .btn
-        font-size: $desktop-font-size-body
-        &__cta
-            font-size: 1.5rem
-            width: 15rem //240px
+    .btn-lg
+        font-size: 1.5rem
+        width: 15rem //240px
     .homepage-badge-img-1
         width: 9.38rem //150px
         height: 9.38rem //150px
