--- a/style/sass/form.sass
+++ b/style/sass/form.sass
@@ -71,16 +71,61 @@ form
         &:focus, &:active
             border: 3px $orange-primary solid
 
+#note-lastName, #note-firstName
+    color: #ad0a0a
+
+.password-checklist p
+    color: $brown-secondary
+    text-align: left
+    line-height: 1rem
+
 .password-input
     display: flex
     align-items: center
 
 .icon-input
+    width: 1.9rem
+    height: 1.9rem
+    margin-left: 0.4rem
+
+.eye-icon-password
     cursor: pointer
     width: 1.5rem
     height: 1.5rem
     margin-left: 0.5rem
 
+.message 
+    margin-bottom: 3rem
+    color: #4d1102
+    & p 
+        font-family: Calibri
+        line-height: 2rem
+        font-size: 1.25rem
+        margin: auto
+
+
+// -------------------------------------------------
+// USED BY JS
+// -------------------------------------------------
+
+.js-display
+    display: none
+
+.js-display-check
+    margin-right: 1rem
+
+.valid
+    background-color: #d9ffdc
+    border: green 2px solid !important
+    &:focus, &:active
+        outline: 4px #abc9a6 solid
+
+.invalid
+    background-color: #ffd6d6 
+    border: red 2px solid !important
+    &:focus, &:active
+        outline: 4px #c9a6a6 solid
+    
 // -------------------------------------------------
 // TABLET
 // -------------------------------------------------
@@ -88,7 +133,7 @@ form
 @media screen and (min-width: 768px)
     .form-element
         min-width: 20rem //320px
-        width: 60%
+        width: 50%
     label
         font-size: $tablet-font-size-body
 
