--- a/style/form.css
+++ b/style/form.css
@@ -1,10 +1,13 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: "Onest", Verdana, Arial, sans-serif;
 }
 
 body {
+  font-family: Verdana, Arial, sans-serif;
+  word-spacing: 2px;
+  font-weight: normal;
+  font-style: normal;
   background-color: #707E66;
 }
 
@@ -18,14 +21,15 @@ main {
 p {
   width: 90%;
   text-align: center;
-  line-height: 1.4rem;
+  line-height: 1.6rem;
   margin: 0.75rem 0;
 }
 
 h1, h2, h3 {
-  font-family: "DM Serif Text", Georgia, Times, serif;
+  font-family: Georgia, Times, serif;
   font-weight: normal;
   font-style: normal;
+  font-weight: bold;
   text-align: center;
   margin: 1.5rem 0 0.75rem;
 }
@@ -35,8 +39,7 @@ h1, h2 {
 }
 
 h1 {
-  font-weight: bold;
-  letter-spacing: 0.2rem;
+  letter-spacing: 0.1rem;
 }
 
 header, footer {
@@ -123,22 +126,28 @@ footer p {
   background-color: #5E564C;
   border: #303030 solid 1px;
 }
-.dropdown-item:hover, .dropdown-item:active, .dropdown-item:focus, .dropdown-item .active {
+.dropdown-item:hover, .dropdown-item:focus {
   text-decoration: underline;
 }
 .dropdown-item:hover {
   color: rgb(255, 255, 255);
   background-color: #8c6a40;
 }
-.dropdown-item:active, .dropdown-item .active {
-  font-weight: bold;
-  background-color: #495341;
-  border: #ffffff solid 1px;
-}
 .dropdown-item:focus {
   color: white;
   border: #ffb700 solid 2px;
   background-color: #665744;
+}
+.dropdown-item.active {
+  color: #ffffff;
+  text-decoration: underline;
+  font-weight: bold;
+  background-color: #495341;
+  border: #ffffff solid 1px;
+  cursor: default;
+}
+.dropdown-item.active:hover {
+  background-color: #495341;
 }
 
 #side-menu {
@@ -149,11 +158,6 @@ footer p {
 #side-menu, .bottom-items {
   width: 90%;
   max-width: 21.88rem;
-}
-
-.bottom-items {
-  position: fixed;
-  bottom: 0;
 }
 
 .side-menu-item {
@@ -167,22 +171,33 @@ footer p {
   background-color: #5E564C;
   border: #303030 solid 1px;
 }
-.side-menu-item:hover, .side-menu-item:active, .side-menu-item:focus, .side-menu-item .active {
+.side-menu-item:hover, .side-menu-item:focus {
   text-decoration: underline;
 }
 .side-menu-item:hover {
   color: rgb(255, 255, 255);
   background-color: #8c6a40;
 }
-.side-menu-item:active, .side-menu-item .active {
-  font-weight: bold;
-  background-color: #495341;
-  border: #ffffff solid 1px;
-}
 .side-menu-item:focus {
   color: white;
   border: #ffb700 solid 2px;
   background-color: #665744;
+}
+.side-menu-item.active {
+  color: #ffffff;
+  text-decoration: underline;
+  font-weight: bold;
+  background-color: #495341;
+  border: #ffffff solid 1px;
+  cursor: default;
+}
+.side-menu-item.active:hover {
+  background-color: #495341;
+}
+
+.bottom-items {
+  position: fixed;
+  bottom: 0;
 }
 
 .close-button {
@@ -231,20 +246,10 @@ footer p {
   margin: 2rem 1rem 0;
 }
 
-.cta {
-  font-family: "DM Serif Text", Georgia, Times, serif;
+.btn {
+  font-family: Georgia, Times, serif;
   font-weight: normal;
   font-style: normal;
-  font-size: 1.5rem;
-  font-weight: bold;
-  letter-spacing: 0.2rem;
-  border-radius: 0.5rem;
-}
-.cta:hover {
-  scale: 1.1;
-}
-
-.btn {
   margin: auto;
   display: flex;
   justify-content: center;
@@ -273,8 +278,21 @@ footer p {
 }
 
 .btn-lg {
+  font-weight: bold;
   height: 2.75rem;
-  width: 11rem;
+  width: 13.75rem;
+}
+
+.cta {
+  font-family: Georgia, Times, serif;
+  font-weight: normal;
+  font-style: normal;
+  font-size: 1.5rem;
+  letter-spacing: 0.1rem;
+  border-radius: 0.5rem;
+}
+.cta:hover {
+  scale: 1.1;
 }
 
 .crd-normal__svg {
@@ -330,7 +348,7 @@ form button[type=submit]:hover {
   border: 3px #CB974F solid;
 }
 
-#note-lastName, #note-firstName {
+#note-lastName, #note-firstName, #error-email, #error-password {
   color: #ad0a0a;
 }
 
@@ -369,7 +387,7 @@ form button[type=submit]:hover {
   margin: auto;
 }
 
-.js-display {
+.js-display, #error-email, #error-password {
   display: none;
 }
 
